...
          height: 70,
          child: Center(child: Icon(Icons.error, color: DefaultColors.red)),
        );
      }
      if (snapshot.hasData && snapshot.data != null) {
        return GestureDetector(
          key: const Key('single_image'),
          onTap: () => _onImageTap(pointer),
          onLongPress: () => _onImageLongPress(pointer.pointer),
          child: Stack(
            children: [
              ClipRRect(
                borderRadius: BorderRadius.circular(8),
...
