...
),


// BODY OF GALLERY SCREEN
body: 
Stack(
  key: const Key('gallery_body'),
  children: [
    Padding(
      padding: const EdgeInsets.all(WidgetUtils.defaultPadding),
      child: Column(
        mainAxisSize: MainAxisSize.min,
        children: [
...
